--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Will You Be My Valentine?</title>
+    <link rel="icon" type="image/png" href="teddy-bear-site.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Poppins:wght@300;400;600&display=swap"
         rel="stylesheet">
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             font-family: 'Poppins', sans-serif;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
             background: linear-gradient(135deg, #ffeef8 0%, #ffe4e1 50%, #fff0f5 100%);
+            min-height: 100vh;
         }
 
         .romantic-font {
@@ -231,53 +238,66 @@
 
         .flying-hug {
             position: fixed;
-            font-size: 6rem;
+            width: 120px;
+            height: 120px;
             pointer-events: none;
             z-index: 9999;
             animation: float-hug 2s ease-out forwards;
         }
+
+        .teddy-logo {
+            width: 80px;
+            height: 80px;
+            display: inline-block;
+        }
     </style>
 </head>
 
-<body class="h-screen w-full flex items-center justify-center relative">
+<body class="min-h-screen w-full flex items-center justify-center relative py-8 px-4">
+
+    <!-- Confetti Canvas -->
+    <canvas id="confetti-canvas"></canvas>
 
     <!-- Floating Hearts Container -->
     <div id="hearts-container" class="absolute inset-0 overflow-hidden pointer-events-none"></div>
 
     <!-- Main Card -->
-    <div class="glass-card rounded-3xl p-8 md:p-12 max-w-lg w-full mx-4 text-center relative z-10">
+    <div class="glass-card rounded-3xl p-6 sm:p-8 md:p-12 max-w-lg w-full mx-auto text-center relative z-10">
 
         <!-- Name Label -->
-        <h1 class="romantic-font text-5xl md:text-6xl font-bold gradient-text mb-2 drop-shadow-sm animate-pulse">
-            ❤️ Chetna ❤️
+        <h1
+            class="romantic-font text-4xl sm:text-5xl md:text-6xl font-bold gradient-text mb-6 drop-shadow-sm animate-pulse">
+            Chetna
         </h1>
 
         <!-- Decorative Top -->
-        <div class="text-4xl mb-4 animate-bounce">💝</div>
+        <div class="mb-4 animate-bounce">
+            <img src="teddy_hug.png" alt="Teddy Bear" class="teddy-logo mx-auto">
+        </div>
 
         <!-- Question -->
         <h1 id="question-text"
-            class="romantic-font text-4xl md:text-5xl font-bold text-gray-800 mb-2 typing-cursor gradient-text">
+            class="romantic-font text-3xl sm:text-4xl md:text-5xl font-bold text-gray-800 mb-2 typing-cursor gradient-text break-words">
             Will you be my Valentine?
         </h1>
 
-        <p class="text-gray-600 mt-4 mb-8 text-lg italic">"You're the CSS to my HTML... without you, I'd just be a
-            skeleton!"</p>
+        <p class="text-gray-600 mt-4 mb-8 text-base sm:text-lg italic px-2">"You're the CSS to my HTML... without you,
+            I'd just be a skeleton!"</p>
 
 
 
         <!-- Buttons Container - Fixed Layout -->
-        <div class="button-area">
+        <div class="button-area" style="min-height: 150px;">
 
             <!-- Yes Button - Always stays in place -->
             <button id="yes-btn"
-                class="pulse-btn bg-gradient-to-r from-pink-500 to-rose-500 hover:from-pink-600 hover:to-rose-600 text-white font-bold py-4 px-10 rounded-full text-xl shadow-lg transform transition-all duration-300 hover:scale-110 hover:rotate-2">
+                class="pulse-btn bg-gradient-to-r from-pink-500 to-rose-500 hover:from-pink-600 hover:to-rose-600 text-white font-bold py-3 sm:py-4 px-6 sm:px-10 rounded-full text-lg sm:text-xl shadow-lg transform transition-all duration-300 hover:scale-110 hover:rotate-2">
                 Yes, I will! 💕
             </button>
 
             <!-- No Button - The Runaway One -->
             <button id="no-btn"
-                class="bg-gray-300 hover:bg-gray-400 text-gray-700 font-semibold py-3 px-8 rounded-full text-lg shadow-md">
+                class="bg-gray-300 hover:bg-gray-400 text-gray-700 font-semibold py-2 sm:py-3 px-6 sm:px-8 rounded-full text-base sm:text-lg shadow-md">
                 No 💔
             </button>
         </div>
@@ -292,22 +312,23 @@
 
     <!-- Success Modal -->
     <div id="success-modal" class="success-modal">
-        <div class="text-center p-8 max-w-2xl w-full">
-            <div class="text-8xl mb-6 floating-image">🥰</div>
-            <h2 class="romantic-font text-6xl md:text-7xl font-bold text-white mb-4 drop-shadow-lg">
+        <div class="text-center p-6 sm:p-8 max-w-2xl w-full mx-4">
+            <div class="text-6xl sm:text-8xl mb-6 floating-image">🥰</div>
+            <h2
+                class="romantic-font text-4xl sm:text-6xl md:text-7xl font-bold text-white mb-4 drop-shadow-lg break-words">
                 She Said Yes!
             </h2>
-            <p class="text-white text-xl md:text-2xl mb-8 font-light">
+            <p class="text-white text-lg sm:text-xl md:text-2xl mb-8 font-light px-4">
                 You've made me the happiest person alive! 💍
             </p>
 
             <!-- Hug Coupon -->
-            <div id="hug-coupon"
-                class="coupon mx-auto mb-8 p-4 rounded-lg max-w-xs shadow-sm bg-white/50 backdrop-blur-sm">
+            <div id="hug-coupon" style="z-index: 10000; position: relative; pointer-events: auto;"
+                class="coupon mx-auto mb-8 p-4 rounded-lg w-full max-w-xs shadow-sm bg-white/50 backdrop-blur-sm cursor-pointer transition-transform hover:scale-105">
                 <div class="flex items-center justify-center gap-2">
-                    <span class="text-2xl">🎟️</span>
+                    <span class="text-xl sm:text-2xl">🎟️</span>
                     <div class="text-left">
-                        <p class="font-bold text-lg romantic-font">Free Hug Coupon</p>
+                        <p class="font-bold text-base sm:text-lg romantic-font">Free Hug Coupon</p>
                         <p class="text-xs opacity-75">Click to Redeem any time!</p>
                     </div>
                 </div>
@@ -505,20 +526,59 @@
 
         // ===== HUG COUPON =====
         const coupon = document.getElementById('hug-coupon');
-        coupon.addEventListener('click', function () {
-            // Simple Replacement Logic: Just show a big hug emoji
-            this.innerHTML = `
+        let couponRedeemed = false;
+
+        if (coupon) {
+            console.log('Coupon element found, adding click listener');
+
+            coupon.addEventListener('click', function (e) {
+                console.log('Coupon clicked!');
+
+                if (couponRedeemed) {
+                    console.log('Coupon already redeemed, ignoring click');
+                    return;
+                }
+
+                couponRedeemed = true;
+
+                // Create flying teddy bear
+                const hugEmoji = document.createElement('img');
+                hugEmoji.src = 'teddy_hug.png';
+                hugEmoji.className = 'flying-hug';
+                hugEmoji.alt = 'Teddy Bear Hug';
+
+                // Position it at the coupon location
+                const rect = this.getBoundingClientRect();
+                hugEmoji.style.left = rect.left + rect.width / 2 - 50 + 'px';
+                hugEmoji.style.top = rect.top + 'px';
+
+                document.body.appendChild(hugEmoji);
+
+                // Remove after animation completes
+                setTimeout(() => {
+                    hugEmoji.remove();
+                    couponRedeemed = false;
+                }, 2000);
+
+                // Mark coupon as redeemed visually
+                this.classList.add('redeemed');
+                this.innerHTML = `
                 <div class="flex items-center justify-center h-full">
-                    <span class="text-6xl animate-bounce">🫂</span>
+                    <span class="text-xl sm:text-2xl">✓ Redeemed!</span>
                 </div>
             `;
 
-            // Still run confetti for fun
-            for (let i = 0; i < 30; i++) {
-                createHeart();
-            }
-        });
-        // createFlyingHug function removed as requested
+                // Launch confetti
+                launchConfetti();
+
+                // Still run hearts for fun
+                for (let i = 0; i < 30; i++) {
+                    createHeart();
+                }
+            });
+        } else {
+            console.error('Coupon element not found!');
+        }
     </script>
 </body>
 
