--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Will You Be My Valentine?</title>
+    <title>Chetna's Valentine</title>
     <link rel="icon" type="image/png" href="teddy-bear-site.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link
