--- a/index.html
+++ b/index.html
@@ -277,7 +277,8 @@
 
         <!-- Question -->
         <h1 id="question-text"
-            class="romantic-font text-3xl sm:text-4xl md:text-5xl font-bold text-gray-800 mb-2 typing-cursor gradient-text break-words">
+            class="romantic-font text-3xl sm:text-4xl md:text-5xl font-semibold text-gray-800 mb-4 typing-cursor gradient-text break-words leading-relaxed"
+            style="line-height: 1.4; padding-bottom: 0.5rem;">
             Will you be my Valentine?
         </h1>
 
